[gd_scene load_steps=34 format=3 uid="uid://cceqxqy5ulef0"]

[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Base.gd" id="1_143xm"]
[ext_resource type="Shader" path="res://Player/WhiteColor.gdshader" id="2_ngi5j"]
[ext_resource type="Texture2D" uid="uid://cntv0vvjoyf86" path="res://Enemies/Sprites/Bat.png" id="3_8wp0l"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_StateMachine.gd" id="6_h3268"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Idle.gd" id="7_r3t6u"]
[ext_resource type="Script" path="res://Overlap/hitbox69.gd" id="8_3k1bp"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Follow.gd" id="8_d5c2s"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_MeleeAttack.gd" id="9_447wd"]
[ext_resource type="Script" path="res://Overlap/hurtbox.gd" id="10_2dlqx"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Death.gd" id="15_6oi53"]
[ext_resource type="Texture2D" uid="uid://de44kldeeq4b" path="res://Effects/Shadows/SmallShadow.png" id="17_185gh"]
[ext_resource type="PackedScene" uid="uid://cms5nxy1iwkm2" path="res://Enemies/Scenes/player_detection.tscn" id="17_kvbjh"]
[ext_resource type="PackedScene" uid="uid://dk7ckqq8mq2nr" path="res://Overlap/Stats.tscn" id="18_mo171"]
[ext_resource type="PackedScene" uid="uid://bhv1fd4uvlhpd" path="res://Enemies/Scenes/wander_controller.tscn" id="19_knn8k"]
[ext_resource type="PackedScene" uid="uid://cgta0wje1tnfy" path="res://UI/Health/healthbar_overhead.tscn" id="20_l8fcu"]
[ext_resource type="PackedScene" uid="uid://bkf2a5dlqworv" path="res://Overlap/soft_collision.tscn" id="21_14vnn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gesaw"]
resource_local_to_scene = true
shader = ExtResource("2_ngi5j")
shader_parameter/active = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mucev"]
resource_local_to_scene = true
shader = ExtResource("2_ngi5j")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_etelw"]
atlas = ExtResource("3_8wp0l")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt1x6"]
atlas = ExtResource("3_8wp0l")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vhlf"]
atlas = ExtResource("3_8wp0l")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpfgk"]
atlas = ExtResource("3_8wp0l")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yd33"]
atlas = ExtResource("3_8wp0l")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_pkr3t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etelw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt1x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vhlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpfgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yd33")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_bq1a0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ksfqm"]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_p5r0p"]
resource_name = "Stop"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvvgn"]
_data = {
"RESET": SubResource("Animation_bq1a0"),
"Start": SubResource("Animation_ksfqm"),
"Stop": SubResource("Animation_p5r0p")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g73up"]
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_12m0g"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_ddof4"]
radius = 73.7564

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2rsni"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g5lp4"]
radius = 8.0

[node name="Enemy_Bat" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_gesaw")
collision_layer = 16
script = ExtResource("1_143xm")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_mucev")
sprite_frames = SubResource("SpriteFrames_pkr3t")
animation = &"fly"
autoplay = "fly"
frame = 2
frame_progress = 0.930489
offset = Vector2(0, -12)

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yvvgn")
}

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("6_h3268")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_r3t6u")

[node name="Follow" type="Node2D" parent="FiniteStateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_d5c2s")
enemy = NodePath("../..")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_447wd")

[node name="MeleeAOE" type="Area2D" parent="FiniteStateMachine/MeleeAttack"]
position = Vector2(17, 6)
collision_layer = 4
collision_mask = 0
script = ExtResource("8_3k1bp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FiniteStateMachine/MeleeAttack/MeleeAOE"]
visible = false
shape = SubResource("CapsuleShape2D_g73up")
disabled = true

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("15_6oi53")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("10_2dlqx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
shape = SubResource("CircleShape2D_12m0g")

[node name="Timer" type="Timer" parent="Hurtbox"]

[node name="PlayerDetection" parent="." instance=ExtResource("17_kvbjh")]
position = Vector2(249.083, 88.3566)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
position = Vector2(-249.083, -88.3566)
shape = SubResource("CircleShape2D_ddof4")
debug_color = Color(0.627451, 0.529412, 0.133333, 0.419608)

[node name="Stats" parent="." instance=ExtResource("18_mo171")]

[node name="DamageNumbersOrigin" type="Node2D" parent="."]
position = Vector2(0, -27)

[node name="WanderController" parent="." instance=ExtResource("19_knn8k")]

[node name="Healthbar" parent="." instance=ExtResource("20_l8fcu")]
visible = false
offset_left = -9.0
offset_top = -30.0
offset_right = 9.0
offset_bottom = -28.0

[node name="Debug" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -42.0
offset_right = 26.0
offset_bottom = -19.0
theme_override_font_sizes/font_size = 8
text = "Debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Base Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_2rsni")

[node name="SoftCollision" parent="." instance=ExtResource("21_14vnn")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
shape = SubResource("CircleShape2D_g5lp4")

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("17_185gh")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="timeout" from="Hurtbox/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="health_changed" from="Stats" to="FiniteStateMachine/Idle" method="_on_stats_health_changed"]

[editable path="PlayerDetection"]
[editable path="SoftCollision"]
